third_party/rust/chromium_crates_io/vendor/zerocopy-0.8.24/tests/ui-msrv/transmute-mut-src-immutable.stderr
error[E0308]: mismatched types
  --> tests/ui-msrv/transmute-mut-src-immutable.rs:17:37
   |
17 |     let _: &mut u8 = transmute_mut!(&0u8);
   |                      ---------------^^^^-
   |                      |              |
   |                      |              types differ in mutability
   |                      expected due to this
   |
   = note: expected mutable reference `&mut _`
                      found reference `&u8`
